--- a/index.html
+++ b/index.html
@@ -87,17 +87,17 @@
 				</div>
 			</div> -->
 
-			<!-- <div class="frame frame_bg">
+			<div class="frame frame_bg">
 				<div class="frame__content">
-					<video class="frame-media" src="media/video_optimized.mp4" autoplay loop muted></video>
+					<video class="frame-media" src="media/portfolio.m4v" autoplay loop muted></video>
 				</div>
-			</div> -->
+			</div>
 
-			<div class="frame">
+			<!-- <div class="frame">
 				<div class="frame__content">
 					<div class="frame-media" style="background-image: url(images/6.jpg)"></div>
 				</div>
-			</div>
+			</div -->
 
 			<div class="frame"></div>
 			<div class="frame"></div>
